--- a/index.css
+++ b/index.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@300&family=Roboto&display=swap');
 
-html {
-    
-}
 
 body {
     font-family: 'Lato', sans-serif;
-    background-color: white
+    background-color: white;
+    max-width: 920px;
+    margin: 0 auto;
 }
 
 .content {
@@ -38,7 +37,7 @@ main {
 }
 
 hr {
-    border: .4px solid rgb(211, 211, 212);
+    
 }
 
 main img {
