--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ header h1 {
     margin-left: 3rem;
 }
 
-img {
+#indexpicture img {
     max-width: 300px;
     float: right;
     border-radius: .25em;
