--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
     font-family: 'Lato', sans-serif;
     background-color: white;
     max-width: 850px;
-    margin: 0 auto;
+    margin: 2em auto;
 }
 
 header,
@@ -20,7 +20,7 @@ footer {
 header h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
-    margin-left: 3rem;
+    margin-left: 2em;
 }
 header img {
     max-width: 250px;
@@ -42,6 +42,6 @@ footer {
 footer a {
     color: black;
 }
-.update {
-    color: #252525;
+#update {
+    color: #404040;
 }
