--- a/index.css
+++ b/index.css
@@ -20,7 +20,10 @@ footer {
 header h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
-    margin-left: 2em;
+    margin-left: 32px;
+}
+header h2 {
+    margin-left: 32px;
 }
 header img {
     max-width: 250px;
