--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 body {
     font-family: 'Lato', sans-serif;
     background-color: white;
-    max-width: 850px;
+    max-width: 800px;
     margin: 2em auto;
 }
 
@@ -22,8 +22,8 @@ header h1 {
     font-weight: bold;
     margin-left: 32px;
 }
-header h2 {
-    margin-left: 32px;
+h2 {
+    margin-left: 12px;
 }
 header img {
     max-width: 250px;
