--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ footer {
     border-radius: .35rem;
     background-color: #71D5FF;
     color: black;
-    box-shadow: #404040;
+    /* box-shadow: ; */
 }
 
 header h1 {
@@ -29,6 +29,7 @@ header img {
     max-width: 250px;
     float: right;
     border-radius: .35em;
+    /* box-shadow: ; */
 }
 
 main {
