--- a/lesson2/lesson2.css
+++ b/lesson2/lesson2.css
@@ -31,6 +31,7 @@ main {
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-gap: 10px;
+    max-width: 800px;
 }
 section {
     margin: 10px;
