--- a/lesson2/lesson2.css
+++ b/lesson2/lesson2.css
@@ -15,6 +15,7 @@ footer {
     background-color: #71D5FF;
     color: black;
     box-shadow: 8px 8px rgba(0, 0, 0, 0.3);
+    text-align: center;
 }
 
 header h1 {
@@ -28,15 +29,13 @@ h2 {
 
 main {
     padding: .5rem;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-gap: 10px;
+    display: block;
     max-width: 800px;
 }
 section {
-    margin: 10px;
+    margin: 5px;
     text-align: center;
-    background-color: white;
+    background-color: lightslategrey;
     border-radius: 25px;
     box-shadow: 8px 8px rgba(0, 0, 0, 0.3);
 }
@@ -45,9 +44,6 @@ li {
     padding: 2.5px;
 }
 
-footer {
-    text-align: center;
-}
 footer a {
     color: black;
 }
