--- a/medium.css
+++ b/medium.css
@@ -1,17 +1,7 @@
 @media only screen and (min-width: 32.5em) {
 
-    main {
-        padding: .5rem;
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        grid-gap: 10px;
-        max-width: 800px;
-    }
-    section {
-        margin: 10px;
-        text-align: center;
-        background-color: lightslategrey;
-        border-radius: 25px;
-        box-shadow: 8px 8px rgba(0, 0, 0, 0.3);
+    header img {
+        float: right;
+        padding-top: 0;
     }
 }
