--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ footer {
     border-radius: .35rem;
     background-color: #71D5FF;
     color: black;
-    box-shadow: 8px 8px rgba(0, 0, 0, 0.7);
+    box-shadow: 3px 3px 10px -1px rgba(0, 0, 0, 0.75);
 }
 
 header h1 {
@@ -29,7 +29,7 @@ header img {
     max-width: 250px;
     border-radius: .35em;
     padding-top: 5px;
-    box-shadow: 8px 8px rgba(0, 0, 0, 0.7);
+    box-shadow: 3px 3px 10px -1px rgba(0, 0, 0, 0.75);
 }
 
 main {
