--- a/lesson2/lesson2.css
+++ b/lesson2/lesson2.css
@@ -15,7 +15,7 @@ footer {
     background-color: #71D5FF;
     color: black;
     box-shadow: 3px 3px 10px -1px rgba(0, 0, 0, 0.75);
-    text-align: ;
+    text-align: center;
 }
 
 header h1 {
@@ -39,6 +39,7 @@ section {
     text-align: center;
     background-color: lightgrey;
     border-radius: 25px;
+    max-width: 260px;
     box-shadow: 3px 3px 10px -1px rgba(0, 0, 0, 0.75);
 }
 
