--- a/lesson2/lesson2.css
+++ b/lesson2/lesson2.css
@@ -24,13 +24,13 @@ header h1 {
     margin-left: 32px;
 }
 h2 {
-    font-size: .5em;
+    font-size: 2em;
 }
 
 main {
     padding: .5rem;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3,250px);
     grid-gap: 10px;
     max-width: 800px;
 }
@@ -39,10 +39,11 @@ section {
     text-align: center;
     background-color: lightgrey;
     border-radius: 25px;
-    max-width: 260px;
     box-shadow: 3px 3px 10px -1px rgba(0, 0, 0, 0.75);
 }
-
+img {
+    max-width: 100%;
+}
 li {
     padding: 2.5px;
 }
