--- a/lesson2/lesson2.css
+++ b/lesson2/lesson2.css
@@ -41,9 +41,10 @@ section {
     border-radius: 25px;
     box-shadow: 3px 3px 10px -1px rgba(0, 0, 0, 0.75);
 }
-img {
+
+/* img {
     max-width: 100%;
-}
+} */
 li {
     padding: 2.5px;
 }
