--- a/lesson2/lesson2.css
+++ b/lesson2/lesson2.css
@@ -41,8 +41,8 @@ section {
     border-radius: 25px;
     box-shadow: 3px 3px 10px -1px rgba(0, 0, 0, 0.75);
 }
-.lesspadding {
-    
+.ea {
+    margin: .84em;
 }
 img {
     max-width: 100%;
