--- a/lesson2/lesson2.css
+++ b/lesson2/lesson2.css
@@ -60,3 +60,13 @@ footer a {
 .updateline {
     color: #404040;
 }
+@media screen and (max-width: 1000px) {
+
+    header img {
+        float: none;
+        padding-top: 0;
+    }
+    main {
+        display: block;
+    }
+}
