--- a/lesson2/medium.css
+++ b/lesson2/medium.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 500px) {
+@media screen and (max-width: 900px) {
     main {
         grid-template-columns: repeat(2,250px);;
     }
