--- a/lesson3/large.css
+++ b/lesson3/large.css
@@ -22,10 +22,10 @@ footer {
 h1, h2 {
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
-    margin-left: 1.3em;
+    margin-left: .5em;
 }
 p {
-    margin-left: 1.5em;
+    margin-left: 1.6em;
 }
 main {
     padding: .5rem;
