--- a/lesson3/large.css
+++ b/lesson3/large.css
@@ -15,6 +15,7 @@ footer {
     background-color: #71D5FF;
     color: black;
     box-shadow: 3px 3px 10px -1px rgba(0, 0, 0, 0.75);
+    text-align: center;
 }
 .icon {
     max-width: 50%;
