--- a/lesson3/large.css
+++ b/lesson3/large.css
@@ -35,6 +35,8 @@ main {
 nav ul {
     text-decoration: none;
     flex: 3;
+    background-color: #4565FF;
+    color: #fff;
 }
 li {
     padding: 2.5px;
