--- a/lesson3/large.css
+++ b/lesson3/large.css
@@ -41,14 +41,16 @@ nav ul {
     list-style: none;
     flex: 3;
     background-color: #4565FF;
-    color: #fff;
     margin-top: 0;
     border-radius: .35rem;
     box-shadow: 3px 3px 10px -1px rgba(0, 0, 0, 0.75);
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(5em, 1fr));
 }
 
 nav a {
     text-decoration: none;
+    color: #fff;
 }
 
 nav a:link,
