--- a/lesson3/large.css
+++ b/lesson3/large.css
@@ -59,6 +59,7 @@ nav a:hover {
     color: black;
     background-color: #6BE8B8;
     font-weight: bold;
+    border-radius: .75rem;
 }
 li {
     padding: 2.5px;
@@ -67,6 +68,7 @@ li {
     color: black;
     background-color: #83FFF3;
     font-weight: bold;
+    border-radius: .75rem;
 }
 
 .color {
@@ -74,6 +76,7 @@ li {
     grid-template-columns: repeat(5, 1fr);
     height: 450px;
     font-size: 20px;
+    border-style: solid;
 }
 
 .color1 {
