--- a/lesson3/large.css
+++ b/lesson3/large.css
@@ -57,7 +57,7 @@ nav a {
 
 nav a:hover {
     color: black;
-    background-color: #6BE8B8;
+    background-color: #82FFAC;
     font-weight: bold;
     border-radius: .75rem;
 }
