--- a/lesson3/large.css
+++ b/lesson3/large.css
@@ -66,7 +66,7 @@ li {
 }
 .active {
     color: black;
-    background-color: #83FFF3;
+    background-color: #82FFAC;
     font-weight: bold;
     border-radius: .75rem;
 }
