--- a/lesson3/medium.css
+++ b/lesson3/medium.css
@@ -2,4 +2,10 @@
     .grid-box {
         display: block;
     }
+    nav ul {
+        
+        flex: 0;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(5em, 1fr));
+    }
 }
