--- a/lesson3/large.css
+++ b/lesson3/large.css
@@ -1,7 +1,7 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@700&display=swap'); */
-
+@import url('https://fonts.googleapis.com/css2?family=Neuton&family=Russo+One&family=Taviraj:wght@500&display=swap" rel="stylesheet');
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Neuton', serif;
     background-color: white;
     max-width: 800px;
     margin: 2em auto;
@@ -22,12 +22,19 @@ footer {
 
 h1,
 h2 {
-    font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     margin-left: .5em;
+    font-family: 'Russo One', sans-serif;
+}
+h2 {
+    font-family: 'Taviraj', serif;
 }
 p {
     margin-left: 1.6em;
+    
+}
+li p {
+    margin-left: 0;
 }
 
 main {
