--- a/lesson3/large.css
+++ b/lesson3/large.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@700&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Neuton&family=Russo+One&family=Taviraj:wght@500&display=swap" rel="stylesheet');
 body {
     font-family: 'Neuton', serif;
@@ -32,9 +31,11 @@ h2 {
 p {
     margin-left: 1.6em;
     font-size: 18px;
+    line-height: initial;
 }
 li p {
     margin-left: 0;
+    line-height: 0;
 }
 
 main {
@@ -87,7 +88,6 @@ nav ul li {
     font-size: 20px;
     border-style: solid;
 }
-
 .color1 {
     background-color: #9DFF75;
 }
