--- a/lesson3/medium.css
+++ b/lesson3/medium.css
@@ -22,6 +22,7 @@
     .active, nav a:hover {
         background-color: initial;
         font-size: 1.7rem;
+        padding: .2em;
     }
     li p {
         line-height: 1em;
