--- a/lesson3/large.css
+++ b/lesson3/large.css
@@ -46,13 +46,11 @@ nav {
 }
 nav ul {
     list-style: none;
-    flex: 3;
     background-color: #6BE871;
     margin-top: 0;
     border-radius: .35rem;
     box-shadow: 3px 3px 10px -1px rgba(0, 0, 0, 0.75);
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(5em, 1fr));
+    display: flex;
     padding: .6em;
 }
 nav a {
@@ -70,6 +68,7 @@ nav a:hover {
 }
 nav ul li {
     padding: 2.5px;
+    flex-grow: 1;
 }
 .active {
     color: black;
