--- a/lesson3/large.css
+++ b/lesson3/large.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Neuton', serif;
     background-color: white;
     max-width: 800px;
-    margin: 2em auto;
+    margin: 0 auto;
 }
 
 header,
