--- a/lesson4/css/large.css
+++ b/lesson4/css/large.css
@@ -2,7 +2,6 @@
 body {
     font-family: 'Neuton', serif;
     background-color: white;
-    max-width: 800px;
     margin: 0 auto;
 }
 
@@ -12,11 +11,11 @@ footer {
     border-radius: .35rem;
     background-color: #9DFF75;
     color: black;
-    box-shadow: 3px 3px 10px -1px rgba(0, 0, 0, 0.75);
     text-align: center;
 }
 .icon {
-    max-width: 50%;
+    max-width: 19%;
+    /* float: left; */
 }
 
 h1,
@@ -49,7 +48,7 @@ nav ul {
     background-color: #6BE871;
     margin-top: 0;
     border-radius: .35rem;
-    box-shadow: 3px 3px 10px -1px rgba(0, 0, 0, 0.75);
+    /* box-shadow: 3px 3px 10px -1px rgba(0, 0, 0, 0.75); */
     display: flex;
     padding: .6em;
 }
