--- a/lesson4/css/large.css
+++ b/lesson4/css/large.css
@@ -1,127 +1,4 @@
+/* phone windows */
+@media screen and (min-width: 940px) {
 
-body {
-    font-family: 'Neuton', serif;
-    background-color: white;
-    margin: 0 auto;
-}
-
-header,
-footer {
-    padding: 1rem;
-    border-radius: .35rem;
-    background-color: #9DFF75;
-    color: black;
-    text-align: center;
-}
-main, footer {
-    max-width: 920px;
-}
-.icon {
-    max-width: 19%;
-    /* float: left; */
-}
-
-h1 {
-    font-family: 'Russo One', sans-serif;
-}
-h2, h3 {
-    margin-left: .5em;
-    font-family: 'Taviraj', serif;
-}
-p {
-    margin-left: 1.6em;
-    font-size: 18px;
-    line-height: initial;
-}
-li p {
-    margin-left: 0;
-    line-height: 1em;
-}
-
-main {
-    padding: .5rem;
-}
-nav {
-    text-align: center;
-}
-nav ul {
-    list-style: none;
-    background-color: #6BE871;
-    margin-top: 0;
-    border-radius: .35rem;
-    /* box-shadow: 3px 3px 10px -1px rgba(0, 0, 0, 0.75); */
-    display: flex;
-    padding: .6em;
-}
-nav a {
-    text-decoration: none;
-    color: black;
-    padding: .6em;
-    font-size: larger;
-}
-
-nav a:hover {
-    color: black;
-    background-color: #82FFAC;
-    font-weight: bold;
-    border-radius: .75rem;
-}
-nav ul li {
-    padding: 2.5px;
-    flex-grow: 1;
-}
-.active {
-    color: black;
-    font-weight: bold;
-    border-radius: .75rem;
-}
-.personas {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-.color {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    height: 450px;
-    font-size: 20px;
-    border-style: solid;
-}
-.color1 {
-    background-color: #9DFF75;
-}
-.color2 {
-    background-color: #6BE871;
-}
-.color3 {
-    background-color: #82FFAC;
-}
-.color4 {
-    background-color: #6BE8B8;
-}
-.color5 {
-    background-color: #83FFF3;
-}
-.color div p {
-    margin: .5em;
-}
-/* colortext */
-table {
-    width: 100%;
-}
-th, td {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-}
-
-footer {
-    text-align: center;
-}
-
-footer a {
-    color: black;
-}
-
-.updateline {
-    color: #404040;
 }
