--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -16,6 +16,7 @@ header {
     display: block;
 }
 
+
 .icon {
     width: 146px;
 }
@@ -43,7 +44,7 @@ main {
 nav {
     text-align: center;
 }
-nav ul {
+.navbar {
     list-style: none;
     background-color: #6BE871;
     margin: 0;
