--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -48,13 +48,12 @@ nav {
 .navbar {
     list-style: none;
     padding: 0;
+    margin: 0;
 }
 .navbar li:first-child {
     display: block;
 }
 .narbar li {
-    /* padding: 2.5px; */
-    /* flex-grow: 1; */
     /* display: none */
 }
 .navbar a {
