--- a/lesson4/css/large.css
+++ b/lesson4/css/large.css
@@ -1,5 +1,5 @@
 /* phone windows */
-@media screen and (min-width: 940px) {
+@media only screen and (min-width: 940px) {
     main, footer {
         max-width: 920px;
         margin: 0 auto;
