--- a/lesson4/css/medium.css
+++ b/lesson4/css/medium.css
@@ -1,5 +1,5 @@
 /* tablet windows */
-@media screen and (min-width: 40em) {
+@media only screen and (min-width: 40em) {
     header {
         display: flex;
     }
