--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -80,6 +80,7 @@ nav {
 main section {
     margin: auto;
     width: 700px;
+    padding: 1px;
     box-shadow: rgba(0, 0, 0, .5) 0px 1px 3px 0px;
 }
 .personas {
