--- a/lesson3/medium.css
+++ b/lesson3/medium.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 690px) {
+@media only screen and (min-width: 690px) {
     .grid-box {
         display: block;
     }
