--- a/lesson3/small.css
+++ b/lesson3/small.css
@@ -1,10 +1,10 @@
+/* small screen */
 body {
     font-family: 'Neuton', serif;
     background-color: white;
     max-width: 800px;
     margin: 0 auto;
 }
-
 header,
 footer {
     padding: 1rem;
@@ -17,7 +17,6 @@ footer {
 .icon {
     max-width: 50%;
 }
-
 h1,
 h2 {
     font-weight: bold;
@@ -51,6 +50,7 @@ nav ul {
     box-shadow: 3px 3px 10px -1px rgba(0, 0, 0, 0.75);
     display: flex;
     padding: .6em;
+    flex-direction: column;
 }
 nav a {
     text-decoration: none;
@@ -58,7 +58,6 @@ nav a {
     padding: .6em;
     font-size: larger;
 }
-
 nav a:hover {
     color: black;
     background-color: #82FFAC;
@@ -103,7 +102,6 @@ nav ul li {
 .color div p {
     margin: .5em;
 }
-/* colortext */
 table {
     width: 100%;
 }
@@ -112,15 +110,12 @@ th, td {
     text-align: left;
     border-bottom: 1px solid #ddd;
 }
-
 footer {
     text-align: center;
 }
-
 footer a {
     color: black;
 }
-
 .updateline {
     color: #404040;
 }
