--- a/lesson3/large.css
+++ b/lesson3/large.css
@@ -6,6 +6,10 @@
     nav ul {
         flex-direction: row;
     }
+    nav a {
+        font-size: 1.5em;
+        padding: 0;
+    }
     /* .active, nav a:hover {
         padding: .15em;
     } */
