--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -52,7 +52,8 @@ nav {
 .navbar {
     list-style: none;
     padding: 0;
-    margin: 0;
+    max-width: 970px;
+    margin: auto;
 }
 .navbar li:first-child {
     display: block;
