dimmed primary color

--- a/lesson3/small.css
+++ b/lesson3/small.css
@@ -85,7 +85,7 @@ nav ul li {
     border-style: solid;
 }
 .color1 {
-    background-color: #9DFF75;
+    background-color: #b5ff97;
 }
 .color2 {
     background-color: #6BE871;
