--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -12,10 +12,9 @@ footer {
     text-align: center;
 }
 header {
-    background-color: #9DFF75;
+    background-color: #b5ff97;
     justify-content: center;
 }
-
 
 .icon {
     width: 146px;
