--- a/lesson3/large.css
+++ b/lesson3/large.css
@@ -10,11 +10,14 @@
         font-size: 1.5em;
         padding: 0;
     }
-    /* .active, nav a:hover {
-        padding: .15em;
-    } */
     .personas {
         display: block;
     }
-    
+    .color {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        height: 450px;
+        font-size: 20px;
+        border-style: solid;
+    }
 }
