--- a/lesson3/small.css
+++ b/lesson3/small.css
@@ -78,9 +78,12 @@ nav ul li {
     grid-template-columns: 1fr 1fr;
 }
 .color {
+    display: grid;
     grid-template-columns: none;
     grid-template-rows: repeat(5, 1fr);
     height: auto;
+    font-size: 20px;
+    border-style: solid;
 }
 .color1 {
     background-color: #b5ff97;
