--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -8,6 +8,11 @@ aside {
     background-color: #83FFF3;
     margin: 0 auto;
     text-align: center;
+    padding: 15px;
+    box-shadow: 0px 3px 19px -3px rgba(0,0,0,0.71);
+}
+aside p {
+    margin: 0;
 }
 
 header,
