--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -51,9 +51,7 @@ li p {
     margin-left: 0;
     line-height: 1em;
 }
-main {
-    padding: .5rem;
-}
+
 nav {
     margin: 0 auto;
     background-color: #6BE871;
@@ -94,7 +92,6 @@ nav {
 
 main section {
     margin: 9px auto;
-    max-width: 700px;
     padding: 1px;
     background-color: ghostwhite;
     box-shadow: inset rgba(0,0,0,.5) 0px 0px 5px 0px
@@ -102,45 +99,17 @@ main section {
 main section:hover {
     box-shadow: inset rgba(0,0,0,.5) 0px 0px 8px 1px;
 }
-.personas {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-/* color page */
-.color {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    height: 450px;
-    font-size: 20px;
-    border-style: solid;
-}
-.color1 {
-    background-color: #9DFF75;
-}
-.color2 {
-    background-color: #6BE871;
-}
-.color3 {
-    background-color: #82FFAC;
-}
-.color4 {
-    background-color: #6BE8B8;
-}
-.color5 {
-    background-color: #83FFF3;
-}
-.color div p {
-    margin: .5em;
+.mapcontact {
+    margin-bottom: 0;
 }
 
-table {
-    width: 100%;
-}
-th, td {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-}
+
+
+
+
+
+
+
 
 footer {
     background-color: #6BE871;
