--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -1,4 +1,5 @@
 /* big windows */
+/* defaults */
 body {
     font-family: 'Neuton', serif;
     background-color: white;
@@ -14,7 +15,6 @@ aside {
 aside p {
     margin: 0;
 }
-
 header,
 footer {
     padding: 1rem;
@@ -25,7 +25,6 @@ header {
     background-color: #b5ff97;
     justify-content: center;
 }
-
 .icon {
     width: 146px;
 }
@@ -51,7 +50,7 @@ li p {
     margin-left: 0;
     line-height: 1em;
 }
-
+/* navagation */
 nav {
     margin: 0 auto;
     background-color: #6BE871;
@@ -89,7 +88,7 @@ nav {
     font-weight: bold;
     border-radius: .75rem;
 }
-
+/* content */
 main section {
     margin: 9px auto;
     padding: 1px;
@@ -99,18 +98,19 @@ main section {
 main section:hover {
     box-shadow: inset rgba(0,0,0,.5) 0px 0px 8px 1px;
 }
+.summary img {
+
+}
+.weathersummary {
+    
+    border: 1px solid black;
+    box-shadow: 0px 3px 19px -3px rgba(0,0,0,0.71);
+}
+
+/* footers */
 .mapcontact {
     margin-bottom: 0;
 }
-
-
-
-
-
-
-
-
-
 footer {
     background-color: #6BE871;
 }
