--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -102,7 +102,8 @@ main section:hover {
 
 }
 .weathersummary {
-    
+    background-color: white;
+    padding-right: .7em;
     border: 1px solid black;
     box-shadow: 0px 3px 19px -3px rgba(0,0,0,0.71);
 }
