--- a/lesson5/css/large.css
+++ b/lesson5/css/large.css
@@ -4,7 +4,7 @@
         max-width: 920px;
         margin: 0 auto;
     }
-    .weathersummary {
+    #weathersummary {
         position: absolute;
         top: 350px;
         left: 50px;
