--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -98,13 +98,17 @@ main section {
 main section:hover {
     box-shadow: inset rgba(0,0,0,.5) 0px 0px 8px 1px;
 }
+.summary {
+    position: relative;
+}
 .summary img {
-
+    max-width: 100%;
 }
 #weathersummary {
     position: absolute;
-    top: 350px;
-    left: 50px;
+    top: 10px;
+    left: 10px;
+    max-width: 70%;
     background-color: white;
     padding-right: .7em;
     border: 1px solid black;
