--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -114,6 +114,15 @@ main section:hover {
     border: 1px solid black;
     box-shadow: 0px 3px 19px -3px rgba(0,0,0,0.71);
 }
+.forecast {
+    margin: inherit;
+}
+table {
+    text-align: center;
+}
+tr td {
+    border: 3px solid black;
+}
 
 /* footers */
 .mapcontact {
