how about this?

--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -16,6 +16,9 @@
     .navbar li:first-child {
         display: none;
     }
+    .forecast {
+        display: table;
+    }
     #weathersummary {
         top: 32px;
         left: 40px;
