--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -111,17 +111,22 @@ main section:hover {
     max-width: 70%;
     background-color: white;
     padding-right: .7em;
-    border: 1px solid black;
+    border: 1px solid;
     box-shadow: 0px 3px 19px -3px rgba(0,0,0,0.71);
 }
 .forecast {
+    display: none;
     margin: inherit;
+    text-align: center;
+    padding: 10px;
 }
 table {
-    text-align: center;
+    border-spacing: 0px;
+    border: 1px solid;
+    margin: auto;
 }
 tr td {
-    border: 3px solid black;
+    border: 1px solid;
 }
 
 /* footers */
