--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -103,6 +103,9 @@ main section {
 }
 .summary img {
     max-width: 100%;
+    border: 3px solid;
+    border-radius: 15px;
+    box-shadow: 0px 1px 12px 0px rgba(0,0,0,0.71);
 }
 #weathersummary {
     position: absolute;
@@ -113,11 +116,14 @@ main section {
     padding-right: .7em;
     border: 1px solid;
     box-shadow: 0px 3px 19px -3px rgba(0,0,0,0.71);
+    border-radius: 10px;
 }
 .forecast {
     display: none;
     text-align: center;
     padding: 10px;
+    border-radius: 15px;
+    box-shadow: 0px 1px 12px 0px rgba(0,0,0,0.71);
 }
 table {
     border-spacing: 0px;
@@ -126,6 +132,8 @@ table {
 }
 tr td, tr th {
     border: 2px solid;
+    padding: 1em;
+    background: #e4e4e4;
 }
 
 /* footers */
