--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -118,6 +118,9 @@ main section {
     box-shadow: 0px 3px 19px -3px rgba(0,0,0,0.71);
     border-radius: 10px;
 }
+#weathersummary p, #weathersummary h3 {
+    margin: .3em
+}
 .forecast {
     display: none;
     text-align: center;
