--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -20,8 +20,11 @@
         display: table;
     }
     #weathersummary {
-        top: 32px;
+        top: 10px;
         left: 40px;
         max-width: 250px;
+    }
+    #weathersummary p, #weathersummary h3{
+        margin: 1em;
     }
 }
