--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -26,7 +26,7 @@
     }
     #weathersummary p, #weathersummary h3{
         margin: 1em;
-        font-size: unset;
+        font-size: larger;
     }
     .article img {
         float: right;
