--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -138,12 +138,15 @@ tr td, tr th {
     background: #e4e4e4;
 }
 /* article */
-/* .article {
-
-} */
+.article {
+    border: 1px solid;
+    background: whitesmoke;
+}
 .article img {
     float: none;
-    max-width: 100px;
+    max-width: 40%;
+    margin: .5em;
+    border: 3px solid;
 }
 /* map and contact info */
 
