--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -134,7 +134,7 @@ table {
 }
 tr td, tr th {
     border: 2px solid;
-    padding: 1em;
+    /* padding: 1em; */
     background: #e4e4e4;
 }
 /* article */
