--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -42,12 +42,11 @@ h3 {
     padding-left: .5em;
 }
 p {
-    margin-left: 1.6em;
+    margin: 1.6em;
     font-size: 18px;
     line-height: initial;
 }
 li p {
-    margin-left: 0;
     line-height: 1em;
 }
 /* navagation */
@@ -143,9 +142,12 @@ tr td, tr th {
     background: whitesmoke;
     margin: .3em;
 }
+.article p {
+    text-indent: 50px;
+}
 .article img {
     float: none;
-    max-width: 40%;
+    width: 83%;
     margin: .5em;
     border: 3px solid;
     margin-left: 3em;
@@ -157,20 +159,31 @@ tr td, tr th {
     flex-direction: column;
 }
 .mapcontact div {
-    margin: 1em;
+    margin: 0 1.2em;
 }
-.mapcontact div img {
-    max-width: 70%;
+.mapcontact h3 {
+    margin-left: -.7em;
+}
+.mapcontact .socials {
+    margin: 10px auto;
+}
+.map {
+    display: none;
+}
+.map img {
+    box-shadow: 2px 2px 11px 0px rgba(0,0,0,0.71);
+    height: 232px;
 }
 .contact p {
     line-height: 2em;
-    margin-top: 0;
+    margin: 0;
 }
 .socials a {
     text-decoration: none;
 }
 .socials a img {
     width: 65px;
+    max-width: 70%;
 }
 /* footer */
 footer {
