--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -20,13 +20,15 @@
         display: table;
     }
     #weathersummary {
-        top: 10px;
-        left: 40px;
+
         max-width: 250px;
     }
     #weathersummary p, #weathersummary h3{
         margin: 1em;
         font-size: larger;
+    }
+    .summary img {
+        margin-bottom: 0em;
     }
     .article img {
         float: right;
