--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -90,7 +90,7 @@ nav {
 
 /* content */
 main section {
-    margin: 9px auto;
+    margin: 25px auto;
     padding: 1px;
 }
 /* weather summary */
@@ -102,11 +102,12 @@ main section {
     border: 3px solid;
     border-radius: 15px;
     box-shadow: 0px 1px 12px 0px rgba(0,0,0,0.71);
+    margin-bottom: 5em;
 }
 #weathersummary {
     position: absolute;
-    top: -15px;
-    left: 10px;
+    top: 10px;
+    left: 40px;
     max-width: 70%;
     background-color: white;
     padding-right: .7em;
@@ -116,7 +117,7 @@ main section {
 }
 #weathersummary p, #weathersummary h3 {
     margin: .3em;
-    font-size: 1em;
+    font-size: 1.4em;
 }
 /* 5 day forcast */
 .forecast {
