--- a/lesson7/css/lazyload.css
+++ b/lesson7/css/lazyload.css
@@ -1,10 +1,10 @@
 picture {
     display: block;
 }
-article img[data-src] {
+img[data-src] {
     filter: blur(0.2em);
 }
-article img {
+img {
     filter: blur(0em);
     transition: filter 0.5s;
 }
