--- a/lesson7/css/large.css
+++ b/lesson7/css/large.css
@@ -16,4 +16,12 @@
     .contact p {
         margin-top: 4em;
     }
+    .gal-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .gal-grid div {
+        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75) ;
+        transition: .2s;
+        border: none;
+    }
 }
