--- a/lesson7/css/large.css
+++ b/lesson7/css/large.css
@@ -19,9 +19,13 @@
     .gal-grid {
         grid-template-columns: repeat(3, 1fr);
     }
-    .gal-grid div {
+    /* .gal-grid div {
         box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75) ;
         transition: .2s;
         border: none;
+    } */
+    .gal-grid div:hover {
+        box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75) ;
+        transition: .2s;
     }
 }
